--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: Build iOS Project
 
 on:
   pull_request:
@@ -9,6 +9,8 @@ jobs:
     name: Build app
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Build
-        run: exec ./.github/build.sh
+        run: ./.github/build.sh
