--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,5 +12,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Select Xcode
+        uses: actions/setup-swift@v2
+        with:
+          xcode-version: '15.1'
+
       - name: Build
         run: ./.github/build.sh
