--- a/Project/.swiftlint.yml
+++ b/Project/.swiftlint.yml
@@ -41,7 +41,9 @@ disabled_rules:
 
 # путь к исходникам для проверки кода
 included:
-  - MdEditor/Sources
+  - MdEditor
+  - MdEditorTests
+  - MdEditorUITests
 
 # подкаталоги, в которых линтер не будет делать проверку кода
 excluded:
