--- a/.github/workflows/MdEditor.yml
+++ b/.github/workflows/MdEditor.yml
@@ -14,3 +14,7 @@ jobs:
 
       - name: Build
         run: ./.github/build.sh
+      - name: Run tests
+        run: |
+          cd Project
+          swift test -v
