--- a/.github/workflows/MdEditor.yml
+++ b/.github/workflows/MdEditor.yml
@@ -14,6 +14,9 @@ jobs:
 
       - name: Build
         run: ./.github/build.sh
-      - name: Run tests
-        run: |
-          swift test -v
+
+      - name: Run unit tests
+        run: ./.github/test.sh
+
+      - name: Run ui tests
+        run: ./.github/testui.sh
