--- a/.github/workflows/MdEditor.yml
+++ b/.github/workflows/MdEditor.yml
@@ -5,18 +5,18 @@ on:
     branches: [ "dev" ]
 
 jobs: 
-  build:
-    name: Build app
+  build-and-test:
+    name: Build and Test
     runs-on: macos-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build
+      - name: Build App
         run: ./.github/build.sh
 
-      - name: Run unit tests
+      - name: Run Unit Tests
         run: ./.github/test.sh
 
-      - name: Run ui tests
+      - name: Run Ui Tests
         run: ./.github/testui.sh
