--- a/.github/workflows/MarkdownPackage.yml
+++ b/.github/workflows/MarkdownPackage.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Build
         run: |
           cd Packages/MarkdownPackage
-          swift build -v
+          # swift build -v
+          swift build -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios13.0-simulator"
       - name: Run tests
         run: |
           cd Packages/MarkdownPackage
