--- a/.github/workflows/MarkdownPackage.yml
+++ b/.github/workflows/MarkdownPackage.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Build
         run: |
           cd Packages/MarkdownPackage
-          swift build -v
+          # swift build -v
       - name: Run tests
         run: |
           cd Packages/MarkdownPackage
-          swift test -v
+          # swift test -v
